# CortexFlow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  :memory:  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_DB_CONNECTIONS.md  README_GRAPH.md  README_GRAPH_INTEGRATION.md  TODO.md  advanced_retrieval_test.py  coa_test.py  demonstrate_reasoning.py  dynamic_weighting_test.py  enhancement_summary.txt  example.py  graph_rag_benchmark.py  graph_rag_test.py  metrics_utils.py  ollama_test.py  pyproject.toml  reasoning_framework_summary.md  rename_classes.py  rename_imports.py  requirements.txt  self_reflection_test.py  setup.py  simple_test.py  test.py  test_graph_enhancements.py  test_graph_traversal.py  test_knowledge_integration.py  test_ontology.py  test_reasoning_engine.py  vector_test.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  security.yml
adaptive_context/: __init__.py  agent_chain.py  classifier.py  compressor.py  config.py  dynamic_weighting.py  graph_store.py  knowledge.py  manager.py  memory.py  reflection.py
benchmark/: README.md  __init__.py  comparison_summary.md  datasets.py  evaluation_framework.py  fix_path.py  registry.py  requirements.txt  run_all_comparison.py  run_benchmark.py  run_comparison.sh  setup_evaluation.py  test_generation.py  visualize.py
benchmark/adapters/: __init__.py  activeloop_adapter.py  adaptivecontext_adapter.py  base.py  langchain_adapter.py  llamaindex_adapter.py  qdrant_adapter.py
benchmark/benchmark_results/: README.md
benchmark/metrics/: __init__.py  complexity.py  consistency_metrics.py  memory.py  multi_hop_metrics.py  retrieval.py
benchmark/temp_deep_memory/benchmark_vector_store/_embedding_id/chunks/: d75db5dee2094bdc
benchmark/temp_deep_memory/benchmark_vector_store/_embedding_id/chunks_index/: unsharded
benchmark/temp_deep_memory/benchmark_vector_store/_embedding_shape/chunks/: 74740e7a86544ab9
benchmark/temp_deep_memory/benchmark_vector_store/_embedding_shape/chunks_index/: unsharded
benchmark/temp_deep_memory/benchmark_vector_store/_id_id/chunks/: 52e0630f6b484893
benchmark/temp_deep_memory/benchmark_vector_store/_metadata_id/: commit_diff
benchmark_results/: benchmark_summary.md  benchmark_update.md
benchmark_visualizations/: benchmark_summary.md
cortexflow/: __init__.py  _graph_store_backup.py  agent_chain.py  async_manager.py  classifier.py  cli.py  compressor.py  config.py  dependency_utils.py  dynamic_weighting.py  emotion.py  episodic_memory.py  events.py  fact_detector.py  graph_store.py  inference.py  interfaces.py  knowledge.py  knowledge_coordinator.py  llm_client.py  manager.py  mcp_server.py  memory.py  metrics_utils.py  ontology.py  path_inference.py  performance_optimizer.py  persona.py  reasoning_engine.py  reasoning_facade.py  reasoning_logger.py  reflection.py  relationship.py  response_orchestrator.py  safety.py  session.py  temporal.py  traversal_profiler.py  uncertainty_handler.py  user_profile.py  (+2 more)
cortexflow/examples/: config_example.py
cortexflow/graph_store/: __init__.py  _deps.py  merger.py  relation_extractor.py  schema.py  store.py  traversal.py
cortexflow/integrations/: __init__.py  crewai.py  langchain.py
cortexflow/vector_stores/: __init__.py  base.py  chromadb.py  qdrant.py  sqlite.py
docs/: Makefile  chain_of_agents.md  dynamic_weighting.md  logical_reasoning.md  performance_optimization.md  research_improvements.md  self_reflection.md  uncertainty_handling.md
docs/api/: dynamic_weighting.md  index.md  index.rst
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/api/: config.rst  manager.rst
docs/source/examples/: basic_usage.rst
docs/source/guides/: configuration.rst  getting_started.rst  installation.rst  migration.rst
examples/: advanced_graph_traversal.py  advanced_retrieval_demo.py  basic_usage_demo.py  chain_of_agents_demo.py  crewai_integration.py  demonstrate_reasoning.py  dynamic_weighting_demo.py  evaluate_reasoning.py  graph_rag_benchmark.py  graph_rag_demo.py  graph_rag_test.py  langchain_integration.py  mcp_quickstart.py  ollama_demo.py  performance_optimization_demo.py  reasoning_demo.py  self_reflection_demo.py  temporal_facts.py  uncertainty_handling_demo.py  vector_backends.py  vector_retrieval_demo.py  vector_test.py
temp_deep_memory/benchmark_vector_store/_embedding_shape/chunks/: c2420f93317483a
temp_deep_memory/benchmark_vector_store/_embedding_shape/chunks_index/: unsharded
temp_deep_memory/benchmark_vector_store/embedding/: commit_diff
temp_deep_memory/benchmark_vector_store/embedding/chunks/: a3ae2678eda74dee
temp_deep_memory/benchmark_vector_store/embedding/chunks_index/: unsharded
temp_deep_memory/benchmark_vector_store/id/chunks/: adb36b12fdde4dfe
temp_deep_memory/benchmark_vector_store/id/chunks_index/: unsharded
temp_deep_memory/benchmark_vector_store/metadata/chunks/: 9d09efe9ee144f0a
temp_deep_memory/benchmark_vector_store/metadata/chunks_index/: unsharded
temp_deep_memory/benchmark_vector_store/text/: commit_diff
temp_deep_memory/benchmark_vector_store/text/chunks/: 2a984773f62a4f81
temp_deep_memory/benchmark_vector_store/text/chunks_index/: unsharded
tests/: README.md  conftest.py  test_agent_chain.py  test_async_manager.py  test_chatbot_benchmark.py  test_classifier.py  test_cli.py  test_compressor.py  test_config.py  test_dependency_utils.py  test_dynamic_weighting.py  test_emotion.py  test_episodic_memory.py  test_events.py  test_evidence_benchmark.py  test_extraction.py  test_graph_enhancements.py  test_graph_traversal.py  test_inference.py  test_integration_crewai.py  test_integration_langchain.py  test_knowledge_integration.py  test_knowledge_store.py  test_llm_client.py  test_mcp_server.py  test_memory.py  test_memory_tiers.py  test_metrics_utils.py  test_ontology.py  test_performance_optimizer.py  test_persona.py  test_reasoning_engine.py  test_reasoning_logger.py  test_reflection.py  test_relationship.py  test_safety.py  test_session.py  test_temporal.py  test_traversal_profiler.py  test_uncertainty_handler.py  (+3 more)
(+13 files in other folders)
