[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow"
version = "0.8.0"
description = "Multi-tier memory optimization for LLMs with cognitive-inspired architecture"
readme = "README.md"
authors = [
    {name = "CortexFlow Team", email = "cortexflow@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0",
    "requests>=2.25.0",
    "sqlitedict>=2.1.0",
    "sentence-transformers>=2.2.2",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
graph = [
    "networkx>=3.1",
    "spacy>=3.5.0",
    "python-louvain>=0.16",
]
nlp = [
    "flair>=0.13.0",
    "transformers>=4.35.0",
]
vertex = [
    "google-genai>=0.3.0",
]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
docs = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.2",
    "myst-parser>=2.0.0",
]
all = [
    "networkx>=3.1",
    "spacy>=3.5.0",
    "python-louvain>=0.16",
    "flair>=0.13.0",
    "transformers>=4.35.0",
    "google-genai>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/cortexflow-team/cortexflow"
"Bug Tracker" = "https://github.com/cortexflow-team/cortexflow/issues"
"Documentation" = "https://cortexflow.readthedocs.io"

[project.scripts]
cortexflow = "cortexflow.cli:main"

[tool.pytest.ini_options]
timeout = 120