[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow-llm"
version = "0.9.0"
description = "Multi-tier memory optimization for LLMs with cognitive-inspired architecture"
readme = "README.md"
authors = [
    {name = "Himasha Herath", email = "himasha626@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "llm",
    "memory",
    "context",
    "rag",
    "knowledge-graph",
    "nlp",
    "ai",
    "cognitive-architecture",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "requests>=2.25.0",
    "sqlitedict>=2.1.0",
    "sentence-transformers>=2.2.2",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
graph = [
    "networkx>=3.1",
    "spacy>=3.5.0",
    "python-louvain>=0.16",
]
nlp = [
    "flair>=0.13.0",
    "transformers>=4.35.0",
]
vertex = [
    "google-genai>=0.3.0",
]
litellm = [
    "litellm>=1.0.0",
]
tokenizer = [
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.3.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
docs = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.2",
    "myst-parser>=2.0.0",
]
all = [
    "networkx>=3.1",
    "spacy>=3.5.0",
    "python-louvain>=0.16",
    "flair>=0.13.0",
    "transformers>=4.35.0",
    "google-genai>=0.3.0",
    "litellm>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/HimashaHerath/CortexFlow"
"Bug Tracker" = "https://github.com/HimashaHerath/CortexFlow/issues"
"Documentation" = "https://cortexflow.readthedocs.io"
"Changelog" = "https://github.com/HimashaHerath/CortexFlow/blob/main/CHANGELOG.md"

[project.scripts]
cortexflow = "cortexflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortexflow*"]
exclude = ["tests*", "benchmark*", "docs*", "examples*"]

[tool.setuptools.package-data]
cortexflow = ["py.typed"]

[tool.pytest.ini_options]
timeout = 120
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "S",     # bandit (security)
    "UP",    # pyupgrade
]
ignore = [
    "S101",  # assert usage (fine in tests)
    "S603",  # subprocess without shell=True
    "S607",  # partial executable path
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
